# project-1-musicstream-etl-pipeline

./: .checkov.yaml  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Instructions.md  Intructions.txt  Makefile  README.md  human.md  oneshot_build_prompt.md
.ai/: architecture_decisions.md  architecture_diagram.drawio  architecture_learning_guide.md  backend_defense.md  ci_fix_and_aws_status.md  diagram-review.md  how_to_test.md  human.md  infrastructure_defense.md  interview_qa.md  musicstream_architecture.drawio  musicstream_architecture_grouped.drawio  musicstream_architecture_v2.drawio  optimization_opportunities.md  review.md  status.md  terraform_explained.md
.github/workflows/: cd-dev.yml  cd-prod.yml  ci.yml
docs/: agentic_workflow.md  aws_console_navigation_guide.md  data_handling.md  data_validation.md  decision.md  directory_structure.md  dynamodb_schema.md  error_handling.md  file_archival.md  glue_jobs.md  logging_monitoring.md  master_plan.md  production_deployment.md  references.md  security.md  sprint_planning.md  step_functions.md  terraform.md  testing_strategy.md  transformation_logic.md  ui.md
glue/: pyproject.toml
glue/pyspark/: transform_kpis.py
glue/python_shell/: load_dynamodb.py  refresh_reference.py
glue/shared/: __init__.py  dynamo_utils.py  logging_utils.py  s3_utils.py  schemas.py
infra/bootstrap/: main.tf
lambda/pipe_enrichment/: handler.py
lambda/validate_schema/: handler.py
scripts/: clean.ps1  deploy.ps1  help.ps1  run_with_env.ps1  seed_sample_streams.sh  set_aws_profile.ps1  trigger_pipeline.sh  upload_reference.ps1  upload_reference.sh
step_functions/: pipeline.asl.json
tests/e2e/: test_smoke.py
tests/unit/: test_schemas.py  (+3 more)
ui/: app.py  index.html  requirements.txt
(+58 files in other folders)
