[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for MusicStream Glue jobs"
requires-python = ">=3.9"
dependencies = []
# boto3 and pyarrow are already present in the Glue runtime;
# declaring them here causes pip to re-download+compile in the ephemeral env, which fails.

[project.optional-dependencies]
pyspark = ["pyspark>=3.5"]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "moto[s3,dynamodb]>=5.0",
    "ruff>=0.4",
    "black>=24.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "S", "B"]
ignore = ["S101"]  # Allow assert in tests

[tool.black]
line-length = 100
target-version = ["py312"]
